--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,9 +27,6 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material 
       - run: pip install mkdocs-encryptcontent-plugin
-      - name: Create MKdocs Password
-        run: |
-          echo "global_password: ${{ secrets.MKDOCS_PW }}" > mkdocs_passwords.yaml
-      - name: Verify MKdocs Password
-        run: cat mkdocs_passwords.yaml
+      - name: Set MKDOCS_PW environment variable
+        run: echo "MKDOCS_PW=${{ secrets.MKDOCS_PW }}" >> $GITHUB_ENV
       - run: mkdocs gh-deploy --force
