--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .vscode
+
+# MacOS File Metadata
 .DS_Store
+
+#MKdocs password cache from local dev env
+encryptcontent.cache
