--- a/.github/workflows/update-binaries.yaml
+++ b/.github/workflows/update-binaries.yaml
@@ -52,6 +52,7 @@ jobs:
         git config --global user.name 'GitHub Actions Bot'
         git config --global user.email 'actions@github.com'
         git add ./assets/*
+        git add ./manifests/*
         git commit -m "Add XMOS (Tag: ${{ github.event.inputs.xmos_release_tag }}) and ESPHome (Tag: ${{ github.event.inputs.esphome_release_tag }}) firmware"
         git push
       env:
