--- a/.github/workflows/update-binaries-xmos.yaml
+++ b/.github/workflows/update-binaries-xmos.yaml
@@ -6,9 +6,6 @@ on:
       xmos_release_tag:
         description: 'Tag of the XMOS release firmware to download'
         required: true
-      esphome_release_tag:
-        description: 'Tag of the ESPHome release firmware to download'
-        required: true
 env:
   esphome_repo: FutureProofHomes/Satellite1-ESPHome
   xmos_repo: FutureProofHomes/Satellite1-XMOS
@@ -24,15 +21,6 @@ jobs:
       run: |
         echo "${{ secrets.PAT_TOKEN }}" | gh auth login --with-token
 
-    - name: Download ESPHome release asset
-      run: |
-        mkdir -p ./assets/firmware/esphome/${{ github.event.inputs.esphome_release_tag }}
-        gh release download ${{ github.event.inputs.esphome_release_tag }} \
-        --repo ${{ env.esphome_repo }}  \
-        --dir ./assets/firmware/esphome/${{ github.event.inputs.esphome_release_tag }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-
     - name: Download XMOS release asset
       run: |
         mkdir -p ./assets/firmware/xmos/${{ github.event.inputs.xmos_release_tag }}
@@ -42,18 +30,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
-    - name: Create manifest files for each hardware revision
-      run: |
-        chmod +x ./create_manifest.sh
-        ./create_manifest.sh ${{ github.event.inputs.esphome_release_tag }} ${{ env.esphome_repo }}
-
     - name: Add and commit release assets to the current repository
       run: |
         git config --global user.name 'GitHub Actions Bot'
         git config --global user.email 'actions@github.com'
         git add ./assets/*
         git add ./manifests/*
-        git commit -m "Add XMOS (Tag: ${{ github.event.inputs.xmos_release_tag }}) and ESPHome (Tag: ${{ github.event.inputs.esphome_release_tag }}) firmware"
+        git commit -m "Add XMOS Firmware: ${{ github.event.inputs.xmos_release_tag }}"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
