update workflow for esp32 to unzip assets

--- a/.github/workflows/update-binaries-esp32.yaml
+++ b/.github/workflows/update-binaries-esp32.yaml
@@ -30,6 +30,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
 
+    - name: unzip the ESPHome release asset
+      run: |
+        cd ./assets/firmware/esphome/${{ github.event.inputs.esphome_release_tag }}
+        unzip *.zip
+        rm *.zip
+
     - name: Create manifest files for each hardware revision
       run: |
         chmod +x ./create_manifest.sh
