update workflow with tree command and remove unneeded git operation in xmos workflow

--- a/.github/workflows/update-binaries-esp32.yaml
+++ b/.github/workflows/update-binaries-esp32.yaml
@@ -35,6 +35,7 @@ jobs:
         cd ./assets/firmware/esphome/${{ github.event.inputs.esphome_release_tag }}
         unzip *.zip
         rm *.zip
+        tree
 
     - name: Create manifest files for each hardware revision
       run: |
