update workflow to move esp firmware into main dir.

--- a/.github/workflows/update-binaries-esp32.yaml
+++ b/.github/workflows/update-binaries-esp32.yaml
@@ -34,7 +34,9 @@ jobs:
       run: |
         cd ./assets/firmware/esphome/${{ github.event.inputs.esphome_release_tag }}
         unzip *.zip
+        cp ./build/* .
         rm *.zip
+        rm -rf ./build
         tree
 
     - name: Create manifest files for each hardware revision
