trying autoreload via tags

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,10 +53,11 @@ plugins:
     - encryptcontent:
         global_password: !ENV MKDOCS_PW
         reload_sripts:
-          - javascript/installer.js
+          - '#initAfterDecryption'
+          # - javascript/installer.js
 
 extra_javascript:
-  - javascript/installer.js
+  # - javascript/installer.js
   - https://unpkg.com/esp-web-tools@10/dist/web/install-button.js?module
 
 copyright: |
