--- a/manifests/v2.0.0-alpha.0/satellite-va-rev2-esp32s3.manifest.json
+++ b/manifests/v2.0.0-alpha.0/satellite-va-rev2-esp32s3.manifest.json
@@ -6,14 +6,14 @@
       {
         "chipFamily": "esp32",
         "ota": {
-          "path": "satellite-va-rev2-esp32s3.ota.bin",
+          "path": "./../../assets/firmware/esphome/v2.0.0-alpha.0/satellite-va-rev2-esp32s3.ota.bin",
           "md5": "9d20dfd4458e7c66bf0e6ba0f3cd68dc",
           "summary": "ESPHome Firmware for satellite-va-rev2-esp32s3",
           "release_url": "https://github.com/FutureProofHomes/Satellite1-ESPHome/releases/tag/v2.0.0-alpha.0/"
         },
         "parts": [
           {
-            "path": "satellite-va-rev2-esp32s3.factory.bin",
+            "path": "./../../assets/firmware/esphome/v2.0.0-alpha.0/satellite-va-rev2-esp32s3.factory.bin",
             "offset": 0
           }
         ]
