--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,8 @@ markdown_extensions:
 
 extra_javascript:
   - javascript/installer.js
-  - https://unpkg.com/esp-web-tools@10/dist/web/install-button.js?module
+  - javascript/esp-web-tools/install-button.js?module
+  # - https://cdn.jsdelivr.net/npm/esp-web-tools@10/dist/web/install-button.js?module
 
 copyright: |
   &copy; 2024 <a href="https://futureproofhomes.net" target="_blank" rel="noopener">FutureProof Homes LLC</a>
