--- a/manifests/v2.0.0-alpha.0/satellite-va-rev1-esp32s3.manifest.json
+++ b/manifests/v2.0.0-alpha.0/satellite-va-rev1-esp32s3.manifest.json
@@ -4,7 +4,7 @@
   "new_install_prompt_erase": true,
   "builds": [
       {
-        "chipFamily": "esp32",
+        "chipFamily": "ESP32-S3",
         "ota": {
           "path": "./../../assets/firmware/esphome/v2.0.0-alpha.0/satellite-va-rev1-esp32s3.ota.bin",
           "md5": "5302f03ca8e718aa2bdafe16368c78d6",
