--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,17 +49,9 @@ markdown_extensions:
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 
-# plugins:
-#     - encryptcontent:
-#         global_password: 'password' #!ENV MKDOCS_PW
-#         reload_sripts:
-#           - '#autoexec'
-#           - javascript/installer.js
-#           # - '#initAfterDecryption'
-
 extra_javascript:
   - javascript/installer.js
-  - javascript/esp-web-tools/install-button.js?module
+  - javascript/esp-web-tools/install-button.js
   # - https://cdn.jsdelivr.net/npm/esp-web-tools@10/dist/web/install-button.js?module
 
 copyright: |
