--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,9 @@ extra:
 
 markdown_extensions:
   - md_in_html
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
