--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,10 @@ extra:
       link: https://www.youtube.com/@futureproofhomes
 
 markdown_extensions:
+  - md_in_html
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
