--- a/manifests/latest/satellite1-esp32s3.manifest.json
+++ b/manifests/latest/satellite1-esp32s3.manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "ESPHome Firmware for satellite1-esp32s3",
+  "home_assistant_domain": "esphome",
   "version": "v2.0.0-alpha.32",
   "new_install_prompt_erase": false,
   "builds": [
