--- a/.github/workflows/update-binaries-esp32.yaml
+++ b/.github/workflows/update-binaries-esp32.yaml
@@ -19,8 +19,9 @@ jobs:
 
     - name: Create manifest files for each hardware revision
       run: |
-        chmod +x ./create_manifest.sh
-        ./create_manifest.sh ${{ github.event.inputs.esphome_release_tag }} ${{ env.esphome_repo }}
+        chmod +x ./scripts/create_manifest.sh
+        export GITHUB_TOKEN=${{ secrets.PAT_TOKEN }}
+        ./scripts/create_manifest.sh ${{ github.event.inputs.esphome_release_tag }} ${{ env.esphome_repo }}
 
     - name: Add and commit release assets to the current repository
       run: |
