--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,7 +63,7 @@ markdown_extensions:
 
 
 extra_javascript:
-  - javascript/installer.js
+  # - javascript/installer.js
   - javascript/esp-web-tools/install-button.js
   # - https://cdn.jsdelivr.net/npm/esp-web-tools@10/dist/web/install-button.js?module
 
