--- a/.github/workflows/update-binaries-esp32.yaml
+++ b/.github/workflows/update-binaries-esp32.yaml
@@ -27,7 +27,7 @@ jobs:
       run: |
         git config --global user.name 'GitHub Actions Bot'
         git config --global user.email 'actions@github.com'
-        git add ./assets/*
+        git add .
         git commit -m "Add ESPHome Firmware: ${{ github.event.inputs.esphome_release_tag }}"
         git push
       env:
