Changing landing page and cleaning up page titles
- The getting starting page is now set to index
- Removing custom titles to avoid confusion and simplify maintenance

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,7 @@ site_url: https://docs.futureproofhomes.net
 repo_url: https://github.com/FutureProofHomes/Documentation
 
 nav:
-  # - Welcome: index.md
-  - Getting Started: getting-started.md
+  - Home: index.md
   - Voice Pipeline Setup: voice-pipeline.md
   - Streaming Music: streaming-music.md
   - Multi-Sensor Configs: multi-sensor-configs.md
