Adding ESPHome Details
Renaming Sections

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/FutureProofHomes/Documentation
 
 nav:
   - Home: index.md
-  - Voice Pipeline Setup: voice-pipeline.md
+  - Set Up Voice Control: voice-assistant.md
   - Streaming Music: streaming-music.md
   - Modifying the Firmware: modifying-the-firmware.md
   - Multi-Sensor Configs: multi-sensor-configs.md
