--- a/manifest-beta.json
+++ b/manifest-beta.json
@@ -1,19 +1,19 @@
 {
-  "name": "ESPHome Beta Firmware for satellite1.ld2450",
-  "version": "temp-release-alpha",
+  "name": "ESPHome Beta Firmware for satellite1-esp32s3",
+  "version": "v0.1.2-beta.1",
   "new_install_prompt_erase": true,
   "builds": [
     {
       "chipFamily": "ESP32-S3",
       "ota": {
-        "path": "assets/firmware/esphome/beta/satellite1.ld2450.ota.bin",
-        "md5": "5ab2c2f677dade6e875b9d3f6b936f23",
-        "summary": "ESPHome Firmware for satellite1.ld2450",
-        "release_url": "https://github.com/FutureProofHomes/Satellite1-ESPHome/releases/tag/temp-release-alpha/"
+        "path": "assets/firmware/esphome/beta/satellite1-esp32s3.ota.bin",
+        "md5": "db2a42c1811859fd5524ce84555111b7",
+        "summary": "ESPHome Firmware for satellite1-esp32s3",
+        "release_url": "https://github.com/FutureProofHomes/Satellite1-ESPHome/releases/tag/v0.1.2-beta.1/"
       },
       "parts": [
         {
-          "path": "assets/firmware/esphome/beta/satellite1.ld2450.factory.bin",
+          "path": "assets/firmware/esphome/beta/satellite1-esp32s3.factory.bin",
           "offset": 0
         }
       ]
