--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,8 @@ theme:
     - navigation.instant.progress
     - navigation.top
     - navigation.expand
+    - navigation.tracking
+    - navigation.prune
     
     # - toc.integrate
     
