trying to merge with main

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,23 +8,24 @@ nav:
     - Introduction: satellite1-introduction.md
     - Getting Started:
       - Recommended Accessories: satellite1-recommended-accessories.md
-      - PCB Assembly & First Boot: satellite1-assembly.md
-      - Flash Firmware & Connect: satellite1-connecting-to-ha.md
-      - Enclosure Printing & Assembly: satellite1-dev-kit-enclosure.md
+      - CORE & HAT Assembly: satellite1-assembly.md
+      - Connect to Home Assistant: satellite1-connecting-to-ha.md
+      - Adding Presence Sensors: satellite1-presence-sensors.md
     - Home Assistant Configuration:
       - Set Up Voice Control: satellite1-set-up-voice-control.md
       - Streaming Music: satellite1-streaming-music.md
       - Awesome Automations: satellite1-awesome-automations.md
-    - Customization:
+    - Flashing Firmware: 
+      - Flash via USB-C Cable: satellite1-flash-via-usb-c.md
       - Modifying the Firmware: satellite1-modifying-the-firmware.md
-      - Presence Sensors: satellite1-presence-sensors.md
     - Support:
       - Troubleshooting: satellite1-troubleshooting.md
       - FAQs: satellite1-faqs.md
-  - Satellite1 Modules:
+  - Expansion Modules:
     - PoE "SHOE" Module: satellite1-poe-shoe-module-overview.md
     - Amplifier1 Module: satellite1-amplifier-module-overview.md
-  - Satellite1 Mount Kits:
+  - Enclosures & Mount Kits:
+    - Cylindrical Enclosure: satellite1-dev-kit-enclosure.md
     - In-Ceiling Mount Kit: satellite1-mount-kit-overview.md
   - AI Base Station:
     - Introduction: ai-base-station-introduction.md
@@ -122,6 +123,11 @@ plugins:
       background: white
       shadow: true
       manual: false
+  # - redirects:
+  #     redirect_maps:
+  #       'old.md': 'new.md'
+  #       'old/file.md': 'new/file.md'
+  #       'some_file.md': 'http://external.url.com/foobar'
 
 extra_javascript:
   # - javascript/installer.js
@@ -129,6 +135,6 @@ extra_javascript:
   # - https://cdn.jsdelivr.net/npm/esp-web-tools@10/dist/web/install-button.js?module
   - javascript/keyboard_shortcuts_fix.js
   - javascript/firmware_selector.js
-
+  
 copyright: |
   &copy; 2024 <a href="https://futureproofhomes.net" target="_blank" rel="noopener">FutureProofHomes, Inc</a>
