--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,10 +21,13 @@ nav:
       - Troubleshooting: satellite1-troubleshooting.md
       - FAQs: satellite1-faqs.md
   - Expansion Modules:
-    - PoE "SHOE" Module: satellite1-poe-shoe-module-overview.md
+    - PoE1 Module: satellite1-poe-shoe-module-overview.md
     - Amplifier1 Module: satellite1-amplifier-module-overview.md
   - Enclosures & Mount Kits:
-    - Cylindrical Enclosure: satellite1-dev-kit-enclosure.md
+    - Original Cylindrical Enclosure: satellite1-dev-kit-enclosure.md
+    - 5-Watt Enclosure: satellite1-5w-enclosure.md
+    - 15-Watt Enclosure: satellite1-15w-enclosure.md
+    - 25-Watt Enclosure: satellite1-25w-enclosure.md
     - In-Ceiling Mount Kit: satellite1-mount-kit-overview.md
   - AI Base Station:
     - Introduction: ai-base-station-introduction.md
