Detailed snapcast and music control documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
     - Recommended Accessories: satellite1-recommended-accessories.md
     - PCB Assembly: satellite1-assembly.md
     - Connect to Home Assistant: satellite1-connecting-to-ha.md
-    - Set Up Voice Control: satellite1-set-up-voice-control.md
+    - Set Up Voice Pipeline: satellite1-set-up-voice-control.md
     - Adding Presence Sensors: satellite1-presence-sensors.md
     - Streaming Music: satellite1-streaming-music.md
     - Helpful Automations: satellite1-helpful-automations.md
