Upcoming enclosure documentation & assembly instructions
- Added Smart Speaker enclosure and assembly instructions
- Improved navigation and overall documentation structure
- Updated language to address common questions from Discord

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,27 +5,29 @@ nav:
   - Welcome: index.md
   - Satellite1 Dev Kit:
     - Introduction: satellite1-introduction.md
-    - Recommended Accessories: satellite1-recommended-accessories.md
-    - PCB Assembly: satellite1-assembly.md
+    - PCB Assembly & First Boot: satellite1-assembly.md
     - Connect to Home Assistant: satellite1-connecting-to-ha.md
     - Set Up Voice Pipeline: satellite1-set-up-voice-control.md
-    - Adding Presence Sensors: satellite1-presence-sensors.md
+    - Enclosures & Speaker Kits:
+      - OEM Kits:
+        - Smart Speaker Kit: satellite1-smart-speaker-enclosure-kit.md
+        - In-Ceiling Mount Kit: satellite1-mount-kit-overview.md
+      - DIY Enclosures:
+        - Squircle Enclosures: satellite1-squircle-enclosures.md
+        - Cylindrical Enclosure: satellite1-cylindrical-enclosure.md
     - Streaming Music: satellite1-streaming-music.md
     - Helpful Automations: satellite1-helpful-automations.md
     - Flashing Firmware: 
       - Flash via USB-C Cable: satellite1-flash-via-usb-c.md
       - Modifying the Firmware: satellite1-modifying-the-firmware.md
+    - Adding Presence Sensors: satellite1-presence-sensors.md
+    - Expansion Modules:
+      - PoE1 Module: satellite1-poe-shoe-module-overview.md
+      - Amplifier1 Module: satellite1-amplifier-module-overview.md
     - Support:
       - Troubleshooting: satellite1-troubleshooting.md
       - FAQs: satellite1-faqs.md
-  - Expansion Modules:
-    - PoE1 Module: satellite1-poe-shoe-module-overview.md
-    - Amplifier1 Module: satellite1-amplifier-module-overview.md
-  - Enclosures & Mount Kits:
-    - Squircle Enclosures: satellite1-squircle-enclosures.md
-    - Cylindrical Enclosures: satellite1-dev-kit-enclosure.md    
-    - In-Ceiling Mount Kit: satellite1-mount-kit-overview.md
-  - AI Base Station:
+  - Nexus1 AI Base Station:
     - Introduction: ai-base-station-introduction.md
 
 
